--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,40 @@
 <head>
   <title>Blog</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', 'http://fonts.googleapis.com/css?family=Raleway:400,700' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+<div id="sidebar">
+		<ul>
+			<li class="category">Social</li>
+			<li><a href="https://twitter.com/mackenziechild">Twitter</a></li>
+			<li><a href="http://instagram.com/mackenziechild">Instagram</a></li>
+			<li><a href="https://github.com/mackenziechild">Github</a></li>
+			<li><a href="mailto:hey@mackenziechild.me">Email</a></li>
+		</ul>
+
+    <p class="sign_in">Admin Login</p>
+	</div>
+
+<div id="main_content">
+    <div id="header">
+      <p>All Posts</p>
+
+      <div class="buttons">
+        <button class="button"><%= link_to "New Post", new_post_path %></button>
+        <button class="button">Log Out</button>
+      </div>
+    </div>
+
+    <% flash.each do |name, msg| %>
+      <%= content_tag(:div, msg, class: "alert") %>
+    <% end %>
+
+    <%= yield %>
+  </div>
 
 </body>
 </html>
