--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,3 +11,11 @@
 <p class="body">
 	<%= @post.body %>
 </p>
+
+<div id="comments">
+	<h2><%= @post.comments.count %> Comments</h2>
+	<%= render @post.comments %>
+
+	<h3>Add Comment</h3>
+	<%= render 'comments/form' %>
+</div>
