add bootstrap framework

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for([@post, @post.comments.build]) do |f| %>
 	<p>
 		<%= f.label :name %><br>
-		<%= f.text_field :name %>
+		<%= f.text_field :name, class: "form-control" %>
 	</p>
 	<p>
 		<%= f.label :body %><br>
